# BriscolaTracker

./: .gitignore  Briscola  CMakeLists.txt  DECISIONI_DI_PROGETTO.md  Knowledge.md  README.md  TODO  all_games_results.txt  all_games_results2.txt  all_games_results_final.txt  briscola_final_project-_1_.txt  build_test.sh  color_picker_training  color_picker_training.cpp  dump_blobs  eye_log.patch  find_briscola  head_diff.patch  local_diff.patch  main.cpp  main_test.cpp  main_test_reporter.cpp  metrics_test.txt  test_reporter_direct
bozze_varie_cate/: bozza_mai.cpp  brisc_brutta.cpp
build_main/: BriscolaTraker
include/: briscola.h  eye.h  eye_backup_template_matching.h  gameManager.h  header_di_prova2.h  occhi.h  reporter.h  templateCoinMatcher.h  utils.h  video_manager.h
results/: game1_output.txt  game1_results.csv
src/: Briscola.cpp  briscola.cpp  eye.cpp  gameManager.cpp  reporter.cpp  templateCoinMatcher.cpp  test_blur.cpp  test_sift_tuning.cpp  test_template_matching.cpp  utils.cpp  videoFrameManager.cpp  video_manager.cpp
